--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -1,18 +1,20 @@
-.jumbotron-billboard .img {
-    margin-bottom: 0px;
-    opacity: 0.2;
-    color: #fff;
-    background: url("../images/images-sports.jpg") top center no-repeat;
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    overflow: hidden;
-    position:absolute;
-    top:0;
-    left:0;
-    z-index:1;
+.jumbotron .img {
+  margin-bottom: 0px;
+  opacity: 0.25;
+  color: #fff;
+  background: #000;
+  background-image:url("../assets/images/images-sports.jpg");
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  overflow: hidden;
+  position:absolute;
+  top:0;
+  left:0;
+  z-index:1;
 }
-.jumbotron h2 {margin-top:0;}
+.jumbotron h1 {margin-top:0;}
 .jumbotron {
   position:relative;
   padding-top:50px;
@@ -25,7 +27,38 @@
 
 @media screen and (max-width: 768px) {
   .jumbotron {
-    padding-top:20px;
-    padding-bottom:20px;
+      padding-top:20px;
+      padding-bottom:20px;
   }
+}
+
+body { background-color: #F2F6D0 }
+#wrapper {
+  width: 960px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 5%;
+}
+#articles {
+  display: inline-block;
+  overflow: auto;
+  width: 60%;
+  height: 700px;
+}
+#notes {
+  float: right;
+  width: 30%;
+}
+textarea, input {
+  display: block;
+  width: 100%;
+  background-color: #FCF5C7;
+}
+input {
+  height: 36px;
+  font-size: 24px;
+}
+textarea {
+  height: 200px;
+  font-size: 18px;
 }
